Bug 1718867 [Wayland] Move noautohide popup in bounds of parent window, r=emilio

When we position noautohide popup we can't use xdg_positioner as the popup
is rendered aside popup hierarchy and can be closed by user interaction only.

Try to keep the popup on screen by just moving it in scope of
it's parent window.

Differential Revision: https://phabricator.services.mozilla.com/D124909