widget/gtk/nsWindow.h
@@ -668,6 +668,7 @@ class nsWindow final : public nsBaseWidget {
                                  bool aMustMatchParent);
   void WaylandPopupMarkAsClosed();
   void WaylandPopupRemoveClosedPopups();
+  void WaylandPopupSetDirectPosition(GdkPoint* aPosition, GdkRectangle* aSize);
   nsWindow* WaylandPopupFindLast(nsWindow* aPopup);
   GtkWindow* GetCurrentTopmostWindow();
   nsCString GetWindowNodeName();
